<resources>
    <string name="app_name">我哪知道</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="recent_history">Recent History</string>
    <string name="random_problem">Random Problem</string>
    <string name="login">Sign in</string>
    <string name="logout">Log out</string>
    <string name="history">History</string>
    <string name="favorite">Favorites</string>
    <string name="problem">Problem</string>
    <string name="search">      Problem NUMBER or NAME</string>
    <string name="title_activity_side">SideActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_account">Account</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <!-- Strings related to login -->
</resources>