<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/login"
            android:checked="true"
            android:icon="@drawable/login_icon"
            android:title="@string/login" />
        <item
            android:id="@+id/favorite"
            android:icon="@drawable/heart_icon"
            android:title="@string/favorite" />
        <item
            android:id="@+id/history"
            android:icon="@drawable/book_icon"
            android:title="@string/history" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout_icon"
            android:title="@string/logout" />
    </group>
</menu>